--- a/zola/templates/index.html
+++ b/zola/templates/index.html
@@ -96,7 +96,8 @@
                     </a>
                 </div>
             </div>
-            <div>Generated with Rust and Zola</div>
+            <div>Generated with <a href="https://github.com/LeHuman/repo-scraper" target="_blank">Rust</a> and <a
+                    href="https://www.getzola.org/" target="_blank">Zola</a></div>
         </div>
     </div>
     {% endblock sidebar %}
